[package]
name = "todo-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4"] }
